--- a/SimpleConsumerProducer.Consumer/Dockerfile
+++ b/SimpleConsumerProducer.Consumer/Dockerfile
@@ -1,9 +1,8 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER $APP_UID
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
-
+EXPOSE 7045
+ENV ASPNETCORE_URLS=http://+:7045
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
