--- a/SimpleConsumerProducer.Producer/SimpleConsumerProducer.Producer.csproj
+++ b/SimpleConsumerProducer.Producer/SimpleConsumerProducer.Producer.csproj
@@ -10,13 +10,17 @@
 
     <ItemGroup>
         <PackageReference Include="MassTransit" Version="8.2.5" />
+        <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
+        <PackageReference Include="MassTransit.EntityFrameworkCore" Version="8.2.5" />
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.5" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Producers\" />
     </ItemGroup>
 
     <ItemGroup>
