--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,8 +72,39 @@
       interval: 5s
       timeout: 5s
       retries: 3
-      
+  
+#  Saga.OrderService:
+#    image: postgres:latest
+#    environment:
+#      POSTGRES_USER: postgres
+#      POSTGRES_PASSWORD: postgres
+#      POSTGRES_DB: orders
+#    volumes:
+#      - pgconsumer:/var/lib/postgresql/data
+#    ports:
+#      - "5434:5432"
+#    healthcheck:
+#      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+#      interval: 5s
+#      timeout: 5s
+#      retries: 3
+#  Saga.OrderSaga:
+#    image: postgres:latest
+#    environment:
+#      POSTGRES_USER: postgres
+#      POSTGRES_PASSWORD: postgres
+#      POSTGRES_DB: orders
+#    volumes:
+#      - ordersaga:/var/lib/postgresql/data
+#    ports:
+#        - "5435:5432"
+#    healthcheck:
+#      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+#      interval: 5s
+#      timeout: 5s
+#      retries: 3
 volumes: 
     rabbitmq:
     pgproducer:
     pgconsumer:
+    ordersaga:
