--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,7 +87,43 @@
         Saga.OrderSaga:
             condition: service_healthy
     
-            
+  Saga.DeliveryService:
+    build:
+      context: .
+      dockerfile: Saga.DeliveryService/Dockerfile
+    ports:
+      - "8082:8080"
+      - "8083:8081"
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      Saga.DeliveryDb:
+        condition: service_healthy
+  
+#  Saga.PaymentService:
+#    build:
+#      context: .
+#      dockerfile: Saga.DeliveryService/Dockerfile
+#    ports:
+#      - "8084:8080"
+#      - "8085:8081"
+#    depends_on:
+#      rabbitmq:
+#        condition: service_healthy
+#      Saga.PaymentDb:
+#        condition: service_healthy  
+#  
+#  Saga.NotificationService:
+#    build:
+#      context: .
+#      dockerfile: Saga.DeliveryService/Dockerfile
+#    ports:
+#      - "8084:8080"
+#      - "8085:8081"
+#    depends_on:
+#      rabbitmq:
+#        condition: service_healthy
+  
   Saga.OrderSaga:
     image: postgres:latest
     environment:
@@ -103,8 +139,39 @@
       interval: 4s
       timeout: 5s
       retries: 3
+  Saga.DeliveryDb:
+    image: postgres:latest
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: delivery
+    volumes:
+      - delivery:/var/lib/postgresql/data
+    ports:
+      - "5436:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 4s
+      timeout: 5s
+      retries: 3
+#  Saga.PaymentDb:
+#    image: postgres:latest
+#    environment:
+#      POSTGRES_USER: postgres
+#      POSTGRES_PASSWORD: postgres
+#      POSTGRES_DB: payment
+#    volumes:
+#      - payment:/var/lib/postgresql/data
+#    ports:
+#      - "5437:5432"
+#    healthcheck:
+#      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+#      interval: 4s
+#      timeout: 5s
+#      retries: 3
 volumes: 
     rabbitmq:
     pgproducer:
     pgconsumer:
     ordersaga:
+    delivery:
