--- a/Saga.PaymentService/Saga.PaymentService.csproj
+++ b/Saga.PaymentService/Saga.PaymentService.csproj
@@ -33,4 +33,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Saga.Contracts\Saga.Contracts.csproj" />
+    </ItemGroup>
+
 </Project>
